--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
-  "name": "todomvc-flux",
-  "version": "0.0.3",
-  "description": "Example Flux architecture.",
+  "name": "es6-todomvc",
+  "version": "0.0.1",
+  "description": " Flux architecture.",
   "repository": "https://github.com/facebook/flux",
   "main": "js/app.js",
   "dependencies": {
     "babel-runtime": "^5.5.8",
+    "bundle-loader": "^0.5.4",
+    "core-js": "^0.9.18",
+    "css-loader": "^0.15.1",
     "flux": "^2.0.1",
+    "fontmin": "^0.8.1",
+    "humps": "^0.6.0",
+    "iflux": "^1.1.5",
+    "immutable": "^3.7.4",
     "keymirror": "~0.1.0",
+    "loader-utils": "^0.2.10",
+    "normalizr": "^0.1.3",
     "object-assign": "^1.0.0",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "react-document-title": "^1.0.2",
+    "react-pure-render": "^1.0.2",
+    "react-router": "^0.13.3",
+    "selectn": "^0.9.6",
+    "style-loader": "node_modules/style-loader",
+    "underscore": "^1.8.3",
+    "url-loader": "^0.5.6",
+    "whatwg-fetch": "^0.9.0"
   },
   "devDependencies": {
     "babel-core": "^5.5.8",
@@ -32,7 +49,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "./node_modules/.bin/webpack --config webpack.config.production.js",
+    "build": "./node_modules/.bin/webpack -w --config webpack.config.production.js",
     "test": "jest"
   },
   "author": "Bill Fisher",
